# quick-bool

./: .gitignore  .markdownlint.yaml  Cargo.toml  LICENSE  README.md  mise.toml
benches/: benchmarks.rs
examples/: basic_usage.rs  comparison.rs
scripts/: generate-mermaid-charts.js  update-readme-with-benchmarks.sh
src/: lib.rs
tasks/: benchmark
